test: fix blur and hyperlinks on mobile

--- a/style.css
+++ b/style.css
@@ -491,8 +491,8 @@ body {
 
 /* Add class-based styles for each icon */
 .calendly-icon img {
-  width: 40px;
-  height: 40px;
+  width: 42px;
+  height: 42px;
   margin-bottom: 4px;
 }
 
